Sun Aug  3 16:35:24 BST 2003  Colin Watson  <cjwatson@debian.org>

	Add support in pipeline library for writing input to or reading
	output from the whole pipeline.

	* lib/pipeline.c (pipeline_new): Initialize writeto, readfrom,
	  writefd, and readfd.
	  (pipeline_start): Create extra pipes as necessary.
	  (pipeline_wait): Expand TODO comment. Close file descriptors from
	  extra pipes if necessary.
	* lib/pipeline.h (struct pipeline): Add writeto, readfrom, writefd,
	  and readfd.

Sun Aug  3 11:15:17 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c: New pipeline library, adapted from that in groff.
	  The interface isn't complete yet; in particular, it can't be a
	  replacement for popen() at the moment.
	* lib/pipeline.h: New file with pipeline library interface.
	* lib/Makefile.in (ALLSRCS, ALL): Build pipeline.

Sun Aug  3 11:09:07 BST 2003  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4 (MAN_FUNC_STRSIGNAL): New macro to check for the GNU
	  extension strsignal().
	* configure.in: Use it.
	* lib/xstrsignal.c: New file, wrapping strsignal() or sys_siglist
	  depending on what's available (and with a saner return type than
	  strsignal()).
	* lib/Makefile.in (ALLSRCS, XOBJS): Build xstrsignal.
	* include/manconfig.h.in (xstrsignal): Add prototype.

Sun Aug  3 10:57:55 BST 2003  Colin Watson  <cjwatson@debian.org>

	* include/comp_src.h.in: Protect against multiple inclusions.

Sat Aug  2 19:32:04 BST 2003  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Document the recent security fixes.

Sat Aug  2 12:31:24 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/error.c (error_print_progname): Use a proper prototype.

Sat Aug  2 01:23:08 BST 2003  Colin Watson  <cjwatson@debian.org>

	* tools/checkman: Tolerate spaces in NAME sections, since they occur
	  in practice and confused checkman before this. Prompted by a
	  question from James B. Hiller.

Fri Aug  1 22:06:33 BST 2003  Colin Watson  <cjwatson@debian.org>
